--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "eolica/nova-locale-switcher": "dev-support-nova-4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
+        "laravel/nova": "*",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravel/nova": "*",
-        "eolica/nova-locale-switcher": "dev-support-nova-4"
+        "spatie/laravel-backup": "^8.5",
+        "spatie/laravel-permission": "^6.3",
+        "spatie/laravel-translatable": "^6.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
